src/stlang/STLangParser.js
// Generated from STLangParser.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var STLangParserVisitor = require('./STLangParserVisitor').STLangParserVisitor;

var grammarFileName = "STLangParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, "'+'", 
                     "'-'", "'*'", "'/'", "'**'", "'<'", "'>'", "'<='", 
                     "'>='", "'='", "'<>'", "':='", "'=>'", "'..'", "','", 
                     "'('", "')'", "'['", "']'", "':'", "';'", "'&'", "'#'", 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     null, "'*/'" ];

var symbolicNames = [ null, "NUM_INT_DEC", "NUM_INT_BIN", "NUM_INT_OCT", 
                      "NUM_INT_HEX", "NUM_REAL", "STRING_LITERAL", "WSTRING_LITERAL", 
                      "PLUS", "MINUS", "ASTERISK", "SLASH", "POWER", "LT", 
                      "GT", "LE", "GE", "EQ", "NEQ", "ASSIGN", "OUTREF", 
                      "RANGE", "COMMA", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "COLON", "SEMICOLON", "AMPERSAND", "SHARP", "TRUE", 
                      "FALSE", "IF", "THEN", "ELSIF", "ELSE", "END_IF", 
                      "CASE", "OF", "END_CASE", "FOR", "TO", "BY", "DO", 
                      "END_FOR", "REPEAT", "UNTIL", "END_REPEAT", "WHILE", 
                      "END_WHILE", "CONTINUE", "EXIT", "RETURN", "MOD", 
                      "AND", "OR", "XOR", "NOT", "BOOL", "INT", "DINT", 
                      "UINT", "UDINT", "WORD", "DWORD", "REAL", "LREAL", 
                      "STRING", "WSTRING", "IDENTIFIER", "WS", "EOL", "SINGLE_LINE_COMMENT", 
                      "MULTI_LINE_COMMENT_START", "COMMENTS", "MULTI_LINE_COMMENT_START2", 
                      "MULTI_LINE_COMMENT_END" ];

var ruleNames =  [ "structuredText", "statements", "statement", "assignmentStatement", 
                   "procedureStatement", "forStatement", "whileStatement", 
                   "repeatStatement", "ifStatement", "caseStatement", "caseList", 
                   "caseElement", "continueStatement", "exitStatement", 
                   "returnStatement", "expression", "parameterList", "parameterExpression", 
                   "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
                   "sign", "bool", "typeOfNumber", "typeOfString", "variable", 
                   "string", "identifier" ];

function STLangParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

STLangParser.prototype = Object.create(antlr4.Parser.prototype);
STLangParser.prototype.constructor = STLangParser;

Object.defineProperty(STLangParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

STLangParser.EOF = antlr4.Token.EOF;
STLangParser.NUM_INT_DEC = 1;
STLangParser.NUM_INT_BIN = 2;
STLangParser.NUM_INT_OCT = 3;
STLangParser.NUM_INT_HEX = 4;
STLangParser.NUM_REAL = 5;
STLangParser.STRING_LITERAL = 6;
STLangParser.WSTRING_LITERAL = 7;
STLangParser.PLUS = 8;
STLangParser.MINUS = 9;
STLangParser.ASTERISK = 10;
STLangParser.SLASH = 11;
STLangParser.POWER = 12;
STLangParser.LT = 13;
STLangParser.GT = 14;
STLangParser.LE = 15;
STLangParser.GE = 16;
STLangParser.EQ = 17;
STLangParser.NEQ = 18;
STLangParser.ASSIGN = 19;
STLangParser.OUTREF = 20;
STLangParser.RANGE = 21;
STLangParser.COMMA = 22;
STLangParser.LPAREN = 23;
STLangParser.RPAREN = 24;
STLangParser.LBRACK = 25;
STLangParser.RBRACK = 26;
STLangParser.COLON = 27;
STLangParser.SEMICOLON = 28;
STLangParser.AMPERSAND = 29;
STLangParser.SHARP = 30;
STLangParser.TRUE = 31;
STLangParser.FALSE = 32;
STLangParser.IF = 33;
STLangParser.THEN = 34;
STLangParser.ELSIF = 35;
STLangParser.ELSE = 36;
STLangParser.END_IF = 37;
STLangParser.CASE = 38;
STLangParser.OF = 39;
STLangParser.END_CASE = 40;
STLangParser.FOR = 41;
STLangParser.TO = 42;
STLangParser.BY = 43;
STLangParser.DO = 44;
STLangParser.END_FOR = 45;
STLangParser.REPEAT = 46;
STLangParser.UNTIL = 47;
STLangParser.END_REPEAT = 48;
STLangParser.WHILE = 49;
STLangParser.END_WHILE = 50;
STLangParser.CONTINUE = 51;
STLangParser.EXIT = 52;
STLangParser.RETURN = 53;
STLangParser.MOD = 54;
STLangParser.AND = 55;
STLangParser.OR = 56;
STLangParser.XOR = 57;
STLangParser.NOT = 58;
STLangParser.BOOL = 59;
STLangParser.INT = 60;
STLangParser.DINT = 61;
STLangParser.UINT = 62;
STLangParser.UDINT = 63;
STLangParser.WORD = 64;
STLangParser.DWORD = 65;
STLangParser.REAL = 66;
STLangParser.LREAL = 67;
STLangParser.STRING = 68;
STLangParser.WSTRING = 69;
STLangParser.IDENTIFIER = 70;
STLangParser.WS = 71;
STLangParser.EOL = 72;
STLangParser.SINGLE_LINE_COMMENT = 73;
STLangParser.MULTI_LINE_COMMENT_START = 74;
STLangParser.COMMENTS = 75;
STLangParser.MULTI_LINE_COMMENT_START2 = 76;
STLangParser.MULTI_LINE_COMMENT_END = 77;

STLangParser.RULE_structuredText = 0;
STLangParser.RULE_statements = 1;
STLangParser.RULE_statement = 2;
STLangParser.RULE_assignmentStatement = 3;
STLangParser.RULE_procedureStatement = 4;
STLangParser.RULE_forStatement = 5;
STLangParser.RULE_whileStatement = 6;
STLangParser.RULE_repeatStatement = 7;
STLangParser.RULE_ifStatement = 8;
STLangParser.RULE_caseStatement = 9;
STLangParser.RULE_caseList = 10;
STLangParser.RULE_caseElement = 11;
STLangParser.RULE_continueStatement = 12;
STLangParser.RULE_exitStatement = 13;
STLangParser.RULE_returnStatement = 14;
STLangParser.RULE_expression = 15;
STLangParser.RULE_parameterList = 16;
STLangParser.RULE_parameterExpression = 17;
STLangParser.RULE_constant = 18;
STLangParser.RULE_unsignedNumber = 19;
STLangParser.RULE_unsignedInteger = 20;
STLangParser.RULE_unsignedReal = 21;
STLangParser.RULE_sign = 22;
STLangParser.RULE_bool = 23;
STLangParser.RULE_typeOfNumber = 24;
STLangParser.RULE_typeOfString = 25;
STLangParser.RULE_variable = 26;
STLangParser.RULE_string = 27;
STLangParser.RULE_identifier = 28;


function StructuredTextContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_structuredText;
    this.st = null; // StatementsContext
    return this;
}

StructuredTextContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StructuredTextContext.prototype.constructor = StructuredTextContext;

StructuredTextContext.prototype.EOF = function() {
    return this.getToken(STLangParser.EOF, 0);
};

StructuredTextContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

StructuredTextContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStructuredText(this);
    } else {
        return visitor.visitChildren(this);
    }
};




STLangParser.StructuredTextContext = StructuredTextContext;

STLangParser.prototype.structuredText = function() {

    var localctx = new StructuredTextContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, STLangParser.RULE_structuredText);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 58;
        localctx.st = this.statements();
        this.state = 59;
        this.match(STLangParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_statements;
    this._statement = null; // StatementContext
    this.st = []; // of StatementContexts
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.SEMICOLON = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(STLangParser.SEMICOLON);
    } else {
        return this.getToken(STLangParser.SEMICOLON, i);
    }
};


StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatements(this);
    } else {
        return visitor.visitChildren(this);
    }
};




STLangParser.StatementsContext = StatementsContext;

STLangParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, STLangParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 67;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 62;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (STLangParser.IF - 33)) | (1 << (STLangParser.CASE - 33)) | (1 << (STLangParser.FOR - 33)) | (1 << (STLangParser.REPEAT - 33)) | (1 << (STLangParser.WHILE - 33)) | (1 << (STLangParser.CONTINUE - 33)) | (1 << (STLangParser.EXIT - 33)) | (1 << (STLangParser.RETURN - 33)))) !== 0) || _la===STLangParser.IDENTIFIER) {
                    this.state = 61;
                    localctx._statement = this.statement();
                    localctx.st.push(localctx._statement);
                }

                this.state = 64;
                this.match(STLangParser.SEMICOLON); 
            }
            this.state = 69;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;


 
StatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function StatementAssignmentContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementAssignmentContext.prototype = Object.create(StatementContext.prototype);
StatementAssignmentContext.prototype.constructor = StatementAssignmentContext;

STLangParser.StatementAssignmentContext = StatementAssignmentContext;

StatementAssignmentContext.prototype.assignmentStatement = function() {
    return this.getTypedRuleContext(AssignmentStatementContext,0);
};
StatementAssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementRepeatContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementRepeatContext.prototype = Object.create(StatementContext.prototype);
StatementRepeatContext.prototype.constructor = StatementRepeatContext;

STLangParser.StatementRepeatContext = StatementRepeatContext;

StatementRepeatContext.prototype.repeatStatement = function() {
    return this.getTypedRuleContext(RepeatStatementContext,0);
};
StatementRepeatContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementRepeat(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementContinueContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementContinueContext.prototype = Object.create(StatementContext.prototype);
StatementContinueContext.prototype.constructor = StatementContinueContext;

STLangParser.StatementContinueContext = StatementContinueContext;

StatementContinueContext.prototype.continueStatement = function() {
    return this.getTypedRuleContext(ContinueStatementContext,0);
};
StatementContinueContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementContinue(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementReturnContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementReturnContext.prototype = Object.create(StatementContext.prototype);
StatementReturnContext.prototype.constructor = StatementReturnContext;

STLangParser.StatementReturnContext = StatementReturnContext;

StatementReturnContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};
StatementReturnContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementReturn(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementForContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementForContext.prototype = Object.create(StatementContext.prototype);
StatementForContext.prototype.constructor = StatementForContext;

STLangParser.StatementForContext = StatementForContext;

StatementForContext.prototype.forStatement = function() {
    return this.getTypedRuleContext(ForStatementContext,0);
};
StatementForContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementFor(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementExitContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementExitContext.prototype = Object.create(StatementContext.prototype);
StatementExitContext.prototype.constructor = StatementExitContext;

STLangParser.StatementExitContext = StatementExitContext;

StatementExitContext.prototype.exitStatement = function() {
    return this.getTypedRuleContext(ExitStatementContext,0);
};
StatementExitContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementExit(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementCaseContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementCaseContext.prototype = Object.create(StatementContext.prototype);
StatementCaseContext.prototype.constructor = StatementCaseContext;

STLangParser.StatementCaseContext = StatementCaseContext;

StatementCaseContext.prototype.caseStatement = function() {
    return this.getTypedRuleContext(CaseStatementContext,0);
};
StatementCaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementCase(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementProcedureContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementProcedureContext.prototype = Object.create(StatementContext.prototype);
StatementProcedureContext.prototype.constructor = StatementProcedureContext;

STLangParser.StatementProcedureContext = StatementProcedureContext;

StatementProcedureContext.prototype.procedureStatement = function() {
    return this.getTypedRuleContext(ProcedureStatementContext,0);
};
StatementProcedureContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementProcedure(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementWhileContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementWhileContext.prototype = Object.create(StatementContext.prototype);
StatementWhileContext.prototype.constructor = StatementWhileContext;

STLangParser.StatementWhileContext = StatementWhileContext;

StatementWhileContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};
StatementWhileContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementWhile(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function StatementIfContext(parser, ctx) {
	StatementContext.call(this, parser);
    StatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

StatementIfContext.prototype = Object.create(StatementContext.prototype);
StatementIfContext.prototype.constructor = StatementIfContext;

STLangParser.StatementIfContext = StatementIfContext;

StatementIfContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};
StatementIfContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitStatementIf(this);
    } else {
        return visitor.visitChildren(this);
    }
};



STLangParser.StatementContext = StatementContext;

STLangParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, STLangParser.RULE_statement);
    try {
        this.state = 80;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            localctx = new StatementAssignmentContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 70;
            this.assignmentStatement();
            break;

        case 2:
            localctx = new StatementProcedureContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 71;
            this.procedureStatement();
            break;

        case 3:
            localctx = new StatementReturnContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 72;
            this.returnStatement();
            break;

        case 4:
            localctx = new StatementIfContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 73;
            this.ifStatement();
            break;

        case 5:
            localctx = new StatementCaseContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 74;
            this.caseStatement();
            break;

        case 6:
            localctx = new StatementForContext(this, localctx);
            this.enterOuterAlt(localctx, 6);
            this.state = 75;
            this.forStatement();
            break;

        case 7:
            localctx = new StatementWhileContext(this, localctx);
            this.enterOuterAlt(localctx, 7);
            this.state = 76;
            this.whileStatement();
            break;

        case 8:
            localctx = new StatementRepeatContext(this, localctx);
            this.enterOuterAlt(localctx, 8);
            this.state = 77;
            this.repeatStatement();
            break;

        case 9:
            localctx = new StatementContinueContext(this, localctx);
            this.enterOuterAlt(localctx, 9);
            this.state = 78;
            this.continueStatement();
            break;

        case 10:
            localctx = new StatementExitContext(this, localctx);
            this.enterOuterAlt(localctx, 10);
            this.state = 79;
            this.exitStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function AssignmentStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_assignmentStatement;
    this.lhs = null; // VariableContext
    this.rhs = null; // ExpressionContext
    return this;
}

AssignmentStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
AssignmentStatementContext.prototype.constructor = AssignmentStatementContext;

AssignmentStatementContext.prototype.ASSIGN = function() {
    return this.getToken(STLangParser.ASSIGN, 0);
};

AssignmentStatementContext.prototype.variable = function() {
    return this.getTypedRuleContext(VariableContext,0);
};

AssignmentStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

AssignmentStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitAssignmentStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




STLangParser.AssignmentStatementContext = AssignmentStatementContext;

STLangParser.prototype.assignmentStatement = function() {

    var localctx = new AssignmentStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, STLangParser.RULE_assignmentStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        localctx.lhs = this.variable();
        this.state = 83;
        this.match(STLangParser.ASSIGN);
        this.state = 84;
        localctx.rhs = this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ProcedureStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_procedureStatement;
    this.func = null; // IdentifierContext
    this.args = null; // ParameterListContext
    return this;
}

ProcedureStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProcedureStatementContext.prototype.constructor = ProcedureStatementContext;

ProcedureStatementContext.prototype.LPAREN = function() {
    return this.getToken(STLangParser.LPAREN, 0);
};

ProcedureStatementContext.prototype.RPAREN = function() {
    return this.getToken(STLangParser.RPAREN, 0);
};

ProcedureStatementContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

ProcedureStatementContext.prototype.parameterList = function() {
    return this.getTypedRuleContext(ParameterListContext,0);
};

ProcedureStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof STLangParserVisitor ) {
        return visitor.visitProcedureStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




STLangParser.ProcedureStatementContext = ProcedureStatementContext;

STLangParser.prototype.procedureStatement = function() {

    var localctx = new ProcedureStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, STLangParser.RULE_procedureStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        localctx.func = this.identifier();
        this.state = 87;
        this.match(STLangParser.LPAREN);
        this.state = 89;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(((((_la - 1)) & ~0x1f) == 0 && ((1 << (_la - 1)) & ((1 << (STLangParser.NUM_INT_DEC - 1)) | (1 << (STLangParser.NUM_INT_BIN - 1)) | (1 << (STLangParser.NUM_INT_OCT - 1)) | (1 << (STLangParser.NUM_INT_HEX - 1)) | (1 << (STLangParser.NUM_REAL - 1)) | (1 << (STLangParser.STRING_LITERAL - 1)) | (1 << (STLangParser.WSTRING_LITERAL - 1)) | (1 << (STLangParser.PLUS - 1)) | (1 << (STLangParser.MINUS - 1)) | (1 << (STLangParser.LPAREN - 1)) | (1 << (STLangParser.TRUE - 1)) | (1 << (STLangParser.FALSE - 1)))) !== 0) || ((((_la - 58)) & ~0x1f) == 0 && ((1 << (_la - 58)) & ((1 << (STLangParser.NOT - 58)) | (1 << (STLangParser.BOOL - 58)) | (1 << (STLangParser.INT - 58)) | (1 << (STLangParser.DINT - 58)) | (1 << (STLangParser.UINT - 58)) | (1 << (STLangParser.UDINT - 58)) | (1 << (STLangParser.WORD - 58)) | (1 << (STLangParser.REAL - 58)) | (1 << (STLangParser.LREAL - 58)) | (1 << (STLangParser.STRING - 58)) | (1 << (STLangParser.WSTRING - 58)) | (1 << (STLangParser.IDENTIFIER - 58)))) !== 0)) {
            this.state = 88;
            localctx.args = this.parameterList();
        }

        this.state = 91;
        this.match(STLangParser.RPAREN);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ForStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = STLangParser.RULE_forStatement;
    this.id = null; // IdentifierContext
    this.start = null; // ExpressionContext
    this.end = null; // ExpressionContext
    this.step = null; // ExpressionContext
    this.st = null; // StatementsContext
    return this;
}

ForStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ForStatementContext.prototype.constructor = ForStatementContext;

ForStatementContext.prototype.FOR = function() {
    return this.getToken(STLangParser.FOR, 0);
};

ForStatementContext.prototype.ASSIGN = function() {
    return this.getToken(STLangParser.ASSIGN, 0);
};

ForStatementContext.prototype.TO = function() {
    return this.getToken(STLangParser.TO, 0);
};

ForStatementContext.prototype.DO = function() {
    return this.getToken(STLangParser.DO, 0);
};

ForStatementContext.prototype.END_FOR = function() {
    return this.getToken(STLangParser.END_FOR, 0);
};

ForStatementContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

ForStatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

ForStatementContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};
